# midos.house

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix
.sqlx/: query-015121a1ac0f83c1b44cafa172ba3c2f5b8e965cc5fab39d918884edb69f59f5.json  query-0374f4d550191dfe3e4fec41773c8c097339ff5a4c1c74dce7e2cf826e5a29df.json  query-03875423bc8c71912ef8e3c04b46f0da556bc6363f70ceb76e929cd51c0fb068.json  query-03fbec828d11ae0c25eeb984919cc7e838a3f1d3b94e68d7548124b273c26ed5.json  query-052fd04c53329124999f51feeeebd112a4d07f150a9f0f54504518255f27777c.json  query-055175252239f057d666677bd432f081a6bef901fb522c6cef50ea84b51d9d42.json  query-06bbe4c6e6e81fed2a00ffe53d4a4cde692d4562527c7756ebb0b673d6633b73.json  query-07c40112ba3c0b34261a31aae234724bd4e008722b961e972e00b7530e2284ab.json  query-08b1222c53cd32dd5f73778d992a069f2d6a441115bff59dfd8a54fdfb55853e.json  query-09d04423a7b819cba50915c043420b1a7f782334079fe5ed81e10b54a5e60443.json  query-0aa9fe99776b03ea30458d30996f1c35063723127bf208e5133432b7818be77e.json  query-0afba427c39afc8f9cfaea52d3831b1b9f4c5dd64128ddab1f49698ac2a9b471.json  query-0b754cb6e52909be09909b2fcb2f5aad0ccb0fa50caa196902e51c857ebfb59b.json  query-0b779c02bc96d2319c847948e2560b03e3d83adb941ff08c064a40ff2a34087c.json  query-0bc2c2ab53b4d6328e34210be43059973cba2c25bbf3b3e74199288bf97afe39.json  query-0c31e17abbff7e30328e42429b5916c197c4cad357b1ea80bba32288e85fb441.json  query-0d1cf8b3ef00344bb82d0202225098d8de55caad9cc9836ee564eda68574f6d7.json  query-0d3c60a8e8853ca3dfbcd4505b5cc7e66d655f742f01e41434671658b87abc7e.json  query-0dea7cde194b9185e70cb46f4223f436d0c5e36d410cb41ec37f0de2e53bfa6c.json  query-1045fbb1d7e15d8046db8b4e8e3398a09c156058f4350270677547dd8688c59f.json  query-10a8a5b2fb33e0126f0abd73a649ccdb3a581875ea03865993f54bf38a32cad7.json  query-10ad35304e34290cc8803783c7355174ff0a756ca80de4ebe8f043375806429b.json  query-1108d3ed81e12f06dc57508963dea88a7def24552b9c09fe7d3787c17186dab9.json  query-111f44b146f2c1e4cabe03fd5ab7b72ad897abb8d7cc5683562cc3e6f3e43b23.json  query-11d6d00e68caace64462e38de10bc7e668615f9a101888fc72a17e597b06c59a.json  query-11e23812e07afd9846880c7b7294bc85b3fae840146f339906f2701eb2fb1da8.json  query-12155a0128c80eb782ddcf9b821ba2f0b5f29f8d850fb1b009dd965b4d661e93.json  query-138027a7630aa81fb6898ec9cc7e187e88389e8aebbfde36cec42dd5a1c904fb.json  query-13c885453f13cd92bfbb3df1ff90498cadd4241c1dd2cf96d41014723b95503e.json  query-148f6f1e91c7a5200585562001a64ff9f0c0a3dcddd49d4bf65849620672307f.json  query-154f16f5c30c75952fab91c9cdfb2f9547c29f0fe0ebac8d2b834e79901fcf34.json  query-15eb6c338866d8b53bb7ab897565ad17e9dadfe90ff008a4ae1cc60821be499e.json  query-15f37e103e6f4b005589c43a88ab4b5b3455b4ea9f698c9497088a90e992933e.json  query-15f3d21e0cd135886d736348af768fe184f7bbfef50921761bafe67ef554b6fa.json  query-1752649cccf46d05ca64c516bd500c75909cd0ca3b8b43432d2ad2e58b730ad8.json  query-1763e3994222f744a578fc83a235af638f94d7c797c440d9a00940c6973a0d2c.json  query-17c471f37d28b3951d41a9cc7d2b6b4469aefc47a379a22c8d430285a0e1c402.json  query-184415c18749955df1c4080b066887cfdb3167deee56cbe203c62784b4bff1c7.json  query-1880c9dd8a57799aec90eff382a4aa68224866ff691b478fb32f6b764980f984.json  query-193e5da517930ad580f620ab8187c75d94d28dd727db25da32192dbaa07962dd.json  (+387 more)
assets/: backup_seeds.py  chests-mw-6.2.158.json  chests-mw-6.2.181.json  chests-rsl-6cbd01b.json  chests-rsl-8299c68.json  chests-rsl-9c9e7ca.json  chests-rsl-a8692e3.json  chests-rsl-b0946a0.json  chests-rsl-ba1fb7c.json  chests-rsl-cf48406.json  chests-rsl-d177a92.json  chests-rsl-d813e60.json  chests-rsl-da4dae5.json  chests-rsl-dev-mvp.json  chests-rsl-e02ce52.json  chests-rsl-e09ce03.json  deploy-local.sh  deploy.ps1  midos-house.service  midos.house.nginx  pre-commit.ps1  pre-commit.py  racetime.midos.house.nginx  reset-dev-env.ps1  reset-dev-env.sh  schema.sql  test-no-reset.ps1  test-no-reset.sh  test-with-reset.ps1  test.ps1  www.midos.house.nginx
assets/error/: 502.html  504.html
assets/event/br/: chests-1-7.1.143.json
assets/event/efk/: chests-2026-9.0.1-blitz.110.json
assets/event/fr/: chests-3-7.1.83-r.1.json  chests-4-8.1.45-rob.105.json  chests-5-8.2.64-rob.135.json  chests-6-9.0.2-rob.17.json
assets/event/latam/: chests-2025-8.3.17-rob.1.json
assets/event/league/: chests-4-7.1.94.json  chests-6-8.0.22.json  chests-7-8.1.69.json  chests-8-8.2.55.json  chests-9-8.3.json
assets/event/mentor/: chests-2026-9.1.json
assets/event/mp/: chests-1-6.2.100-fenhl.4.json  chests-2-7.1.117-fenhl.17.json  chests-3-8.1.36-fenhl.6.riir.4.json  chests-4-8.2.69-fenhl.4.riir.5.json  chests-5-9.0.42-fenhl.2.riir.2.json
assets/event/mq/: chests-1-8.2.json
assets/event/mw/: 2.json  chests-3-6.2.181.json  chests-4-7.1.198.json  chests-5-8.2.63.json
assets/event/ohko/: chests-1-8.0.json  chests-2-8.3.json
assets/event/pot/: chests-1-50813f8.json  weights-1.json
assets/event/rsl/: chests-1-4c526c2.json  (+7 more)
assets/graphql/: startgg-current-user-query.graphql  startgg-event-sets-query.graphql  startgg-report-multi-game-result-mutation.graphql  startgg-report-one-game-result-mutation.graphql  startgg-schema.json  startgg-set-query.graphql  startgg-set-scores-query.graphql  startgg-solo-event-sets-query.graphql  startgg-team-event-sets-query.graphql  startgg-team-members-query.graphql  startgg-user-slug-query.graphql
assets/static/: common.css  common.js
src/: api.rs  auth.rs  cal.rs  challonge.rs  config.rs  discord_bot.rs  draft.rs  event.rs  favicon.rs  form.rs  global.rs  http.rs  id.rs  lang.rs  macros.rs  main.rs  mw.rs  notification.rs  ootr_web.rs  prelude.rs  racetime_bot.rs  seed.rs  sheets.rs  startgg.rs  team.rs  time.rs  unix_socket.rs  user.rs  util.rs
src/event/: configure.rs  enter.rs  mod.rs  mw.rs  ndos.rs  pic.rs  rsl.rs  s.rs  teams.rs  tfb.rs
src/racetime_bot/: mod.rs  report.rs
src/series/: br.rs  coop.rs  efk.rs  fr.rs  latam.rs  league.rs  mentor.rs  mod.rs  mp.rs  mq.rs  mw.rs  ndos.rs  ohko.rs  pic.rs  pot.rs  rsl.rs  s.rs  sco.rs  scrubs.rs  sgl.rs  sl.rs  soh.rs  tfb.rs  tot.rs  wttbb.rs
src/util/: form.rs  id.rs  mod.rs  sync.rs  time.rs
(+35 files in other folders)
